--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </style>
 </head>
 <body>
-    <div id="title">RE-VIEWING THE GAZE</div>
+    <div id="title">RE-VIEWING THE GAZE by Jo Flint</div>
     <div id="container">
         <video id="video" autoplay></video>
         <button id="capture">Capture Photo</button>
